client/src/App.css
/* ... */
.projectBody {
    height: 100%;
    flex-direction: column;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.spansContainer {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    width: 100%;
    overflow: hidden;
    white-space: wrap;
    padding: 10px;
}

span {
    background-color: rgb(72, 72, 72);
    color: rgb(168, 254, 214);
    border-radius: 3px;
    border: rgb(168, 254, 214) 2px solid;
    padding: 3px;
}

.projectBody p {
    padding: 20px;
}

.projectHeader {
    background-color: rgb(57, 57, 57);
    width: 100%;
    height: 3em;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.projectHeader h2 {
    margin-right: 10px;
    letter-spacing: 3px;
}

.projectNumber {
    background-color: rgba(217, 255, 0, 0.569);
    width: 2em;
    height: 2em;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5px;
    position: relative;
    z-index: 0;
}

.projectNumber p {
    position: relative;
    z-index: 3;
}

.testbox h2 {
    color: black;
    margin: 0;
    letter-spacing: 3px;
}

/* Skills section */

.skillsBox {
    box-sizing: border-box;
    background-color: rgb(163, 163, 163);
    height: 50px;
    width: 50px;
}

.skillsContainer {
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
}

.sk1 {
    grid-column: 1;
    grid-row: 1;
}
.sk2 {
    grid-column: 2;
    grid-row: 1;
}
.sk3 {
    display: flex;
    background-color: rgba(37, 37, 37, 0.776);
    flex-direction: row;
    align-items: center;
    justify-content: center;
    grid-column: 1/5;
    grid-row: 1/3;
    position: relative;
    top: 50px;
    width: 100%;
    height: 120%;
}

.skillsMeter {
    display: grid;
    grid-template-columns: 0.5fr 2fr;
    height: 80%;
    width: 90%;
    background-color: rgba(86, 86, 86, 0.352);
    /* background-size: conain; */
}

.skillsLabels {
    height: 100%;
    display: flex;
    flex-direction: column;
    grid-column: 1;
    grid-row: 1/3;
}

.skillLabel {
    flex: 1;
    display: flex;
    height: 100%;
    justify-content: flex-start;
    align-items: center;
}

.skillsBars {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    grid-column: 1/3;
    grid-row: 1/3;
    background-color: rgb(63, 63, 63);
    gap: 5px;
}

.skillMeter {
    height: 10%;
    width: 100%;
    border: 1px solid black;
    background-color: rgb(17, 17, 17);
    background-image: url("../public/images/skillBackground.svg");
    background-size: 3000px;
    background-position-y: 80%;
    background-repeat: no-repeat;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.skillsLabels p {
    text-align: center;
    padding-right: 5px;
    font-family: neuemontreal-regular;
}

.skillsBackground {
    grid-column: 1/4;
}

.java {
    /* background-color: #ea8018; */
    width: 90%;
}

.skillp {
    background-color: rgba(102, 133, 119, 0.46);
    background: linear-gradient(
        90deg,
        rgba(0, 0, 0, 0.3) 0%,
        rgba(136, 181, 161, 1) 100%
    );
    width: fit-content;
    padding: 0 20px;
    position: relative;
    font-family: neuemontreal-medium;
    height: 70%;
    text-align: center;
    letter-spacing: 3px;
    left: 8px;
}

.labelSkill {
    background-color: rgba(217, 255, 0, 0.355);
    width: 200px;
}

.csharp {
    /* background-color: #5b0868; */
    width: 80%;
}

.javascript {
    /* background-color: #ecd745; */
    width: 80%;
}

.html {
    /* background-color: #dc3c23; */
    width: 100%;
}

.wordpress {
    /* background-color: #21658c; */
    width: 60%;
}

.react {
    /* background-color: #1acdf9; */
    width: 50%;
}

.python {
    /* background-color: green; */
    width: 40%;
}

.sql {
    /* background-color: #2d5881; */
    width: 90%;
}

.sk4 {
    display: flex;
    align-items: center;
    justify-content: center;
    grid-column: 1/2;
    grid-row: 1;
    width: 100%;
    height: 70px;
    background-color: white;
    letter-spacing: 3px;
    position: relative;
    bottom: 15px;
    left: 50%;
    box-shadow: 5px 5px 0px 0px rgb(126, 191, 160, 0.446);
    z-index: 5;
}

.skillsSubtitle {
    font-size: larger;
    color: black;
}

/* Contact Section */

.contactMain {
    display: flex;
    flex-direction: column;
    background-color: black;
    padding: 0 1.5rem;
    height: 90vh;
    overflow: hidden;
}

.bottomBar {
    position: absolute;
    bottom: 0;
    height: 1.5rem;
}

.contactTop {
    display: flex;
    flex-direction: column;
    justify-content: right;
    align-items: flex-end;
    position: relative;
}

.contactBar {
    position: absolute;
    top: 0;
    height: 1.5rem;
}

.formAndPicture {
    display: flex;
    flex-direction: row;
    height: 100%;
}

.myPicture {
    background-color: black;
    background-image: url("../public/images/me-3254.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    flex: 1;
    height: 100%;
}

.myForm {
    background-color: black;
    flex: 2;
    height: 90%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 100px;
    align-items: center;
}

.contactBarBottom {
    position: absolute;
    bottom: 0;
}

.contactBottom {
    display: flex;
    flex-direction: column;
    justify-content: right;
    align-items: flex-end;
    position: relative;
}

.barComponent1 {
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
}

.socials {
    display: flex;
    flex-direction: column;
}

.contactTitleBox {
    display: flex;
    flex-direction: column;
    position: relative;
    align-items: center;
    justify-content: center;
    margin: 50px 0 0 0;
    z-index: 3;
}

.contactTitleBox h1 {
    color: white;
    font-family: neueMontreal;
}
/* ... */

